tests/baselines/reference/contextuallyTypeLogicalAnd02.errors.txt
contextuallyTypeLogicalAnd02.ts(4,1): error TS2322: Type '(a: string) => number' is not assignable to type '(a: string) => string'.
  Type 'number' is not assignable to type 'string'.
contextuallyTypeLogicalAnd02.ts(5,11): error TS2322: Type 'string' is not assignable to type 'number'.


==== contextuallyTypeLogicalAnd02.ts (2 errors) ====
    let x: (a: string) => string;
    let y = true;
    
    x = y && (a => {
    ~
!!! error TS2322: Type '(a: string) => number' is not assignable to type '(a: string) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
        const b: number = a;
              ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        return b;
    });